<resources>
    <string name="app_name">Controle de Usina de Energia</string>

    <string name="description">Ciência da Computação</string>
    <string name="projeto">Aplicativo que emula o controle de uma usina de energia eólica.</string>
    <string name="hint_email">E-mail</string>
    <string name="hint_password">Senha</string>
    <string name="sign_in">Entrar</string>
    <string name="signed_in">Logado</string>
    <string name="create_account">Cadastrar</string>
    <string name="sign_out">Sair</string>
    <string name="verify_email">Verificar E-mail</string>
    <string name="signed_out">Deslogado</string>
    <string name="auth_failed">Falha na autenticação</string>
    <string name="Autenticar">Autenticar</string>
    <string name="cancelar">Cancelar</string>
    <string name="descricaoautenticacao">Clique em autenticar e após valide sua biometria.</string>


    <string name="hint_user_id">User ID</string>
    <string name="firebase_status_fmt">Firebase User(uID): %s</string>
    <string name="emailpassword_status_fmt">E-mail User: %1$s (Verificado: %2$b)</string>
    <string name="emailpassword_title_text">E-mail and Password</string>

    <string name="status_email_not_sent">Send link to your email to get started.</string>
    <string name="status_email_sent">Link sent, check your email to continue.</string>
    <string name="status_link_found">Link received, enter email to sign in.</string>

    <string name="firebaseui_status_fmt">Firebase User: %s</string>
    <string name="firebaseui_title_text">FirebaseUI Auth</string>

    <string name="id_fmt">User ID: %s</string>
    <string name="email_fmt">E-mail: %s</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="descricaoqrcode">Para autenticar seu QRCode, clique no botão abaixo</string>
    <string name="autenticar_qrcode">Autenticar QRCode</string>
</resources>
