<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1b2432"
    android:gravity="center_horizontal|center_vertical"
    tools:context=".FingerPrintActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#00807D7D"
        android:gravity="center_horizontal|center_vertical"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textColor="#ffffff"
            android:textColorHint="#ffffff"
            android:text="@string/descricaoautenticacao" />

        <Button
            android:id="@+id/btn_autenticar"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="100px"
            android:background="#2f2e2f"
            android:text="@string/Autenticar" />

        <Button
            android:id="@+id/btn_cancelar"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#2f2e2f"
            android:layout_margin="100px"
            android:text="@string/cancelar" />
    </LinearLayout>

</androidx.appcompat.widget.LinearLayoutCompat>